--- a/config.json
+++ b/config.json
@@ -1,12 +1,12 @@
 { 
-  "ownerNumber": "6285172446692@s.whatsapp.net",
-  "botName": "victor bot",
-  "ownerName": "levi",
+  "ownerNumber": "6283136051467@s.whatsapp.net",
+  "botName": "Rioo bot",
+  "ownerName": "Riyoo",
   "sessionName": "session",
   "footer": "© victor MD 2022",
   "api_lolkey": "SadTeams",
   "group":{
   "judul": "Forum Bot WhatsApp",
-  "link": "https://chat.whatsapp.com/JkdB3gSCwCRGgOdCRfkAt1"
+  "link": "https://chat.whatsapp.com/KSj4eqPTWhEJyJgMtAo2Nr"
   }
 }
